[gd_scene load_steps=29 format=2]

[ext_resource path="res://Resources/Menu.theme" type="Theme" id=1]
[ext_resource path="res://Resources/SmallFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/meter_hunger.png" type="Texture" id=3]
[ext_resource path="res://Resources/HintFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sources/ShiftEnd.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Card.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/Bebas-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/scientist.png" type="Texture" id=8]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=9]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=10]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=11]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=12]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=2]
resource_name = "Show opponent"
tracks/0/type = "value"
tracks/0/path = NodePath("OpponentPicture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1887, 614 ), Vector2( 1551, 614 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Card:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1729, 185 ), Vector2( 1729, 185 ), Vector2( 1171, 103 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Card:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OpponentPicture:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide_opponent_card"
}, {
"args": [  ],
"method": "show_opponent_card"
} ]
}

[sub_resource type="Resource" id=3]
script = ExtResource( 10 )
__meta__ = {
"graph_offset": Vector2( 108, 180 )
}
name = "Entry"

[sub_resource type="Resource" id=6]
script = ExtResource( 10 )
__meta__ = {
"graph_offset": Vector2( 828, 140 )
}
name = "Exit"

[sub_resource type="Resource" id=4]
script = ExtResource( 10 )
__meta__ = {
"graph_offset": Vector2( 347.5, 180 )
}
name = "Player"

[sub_resource type="Resource" id=12]
script = ExtResource( 10 )
__meta__ = {
"graph_offset": Vector2( 528, 40 )
}
name = "Opponent"

[sub_resource type="Resource" id=7]
script = ExtResource( 11 )
name = "player"

[sub_resource type="Resource" id=8]
script = ExtResource( 12 )
from = "Entry"
to = "Player"
conditions = {
"player": SubResource( 7 )
}
priority = 0

[sub_resource type="Resource" id=17]
script = ExtResource( 11 )
name = "never_exit"

[sub_resource type="Resource" id=10]
script = ExtResource( 12 )
from = "Player"
to = "Exit"
conditions = {
"never_exit": SubResource( 17 )
}
priority = 0

[sub_resource type="Resource" id=13]
script = ExtResource( 11 )
name = "opponent"

[sub_resource type="Resource" id=14]
script = ExtResource( 12 )
from = "Player"
to = "Opponent"
conditions = {
"opponent": SubResource( 13 )
}
priority = 0

[sub_resource type="Resource" id=15]
script = ExtResource( 11 )
name = "player"

[sub_resource type="Resource" id=16]
script = ExtResource( 12 )
from = "Opponent"
to = "Player"
conditions = {
"player": SubResource( 15 )
}
priority = 0

[sub_resource type="Resource" id=11]
script = ExtResource( 13 )
name = ""
states = {
"Entry": SubResource( 3 ),
"Exit": SubResource( 6 ),
"Opponent": SubResource( 12 ),
"Player": SubResource( 4 )
}
transitions = {
"Entry": {
"Player": SubResource( 8 )
},
"Opponent": {
"Player": SubResource( 16 )
},
"Player": {
"Exit": SubResource( 10 ),
"Opponent": SubResource( 14 )
}
}

[node name="Results" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1680.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -136, 24 )
color = Color( 0.227451, 0.25098, 0.278431, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 89.0
margin_top = 676.0
margin_right = 664.0
margin_bottom = 1019.0
columns = 2

[node name="HungerLabel" type="Label" parent="GridContainer"]
margin_top = 17.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "hunger"

[node name="HungerContainer" type="VBoxContainer" parent="GridContainer"]
margin_left = 154.0
margin_right = 439.0
margin_bottom = 81.0
custom_constants/separation = 0

[node name="Scale" type="HBoxContainer" parent="GridContainer/HungerContainer"]
margin_right = 285.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="GridContainer/HungerContainer/Scale"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="AffectPopulation" type="HBoxContainer" parent="GridContainer/HungerContainer"]
margin_top = 40.0
margin_right = 285.0
margin_bottom = 81.0
custom_constants/separation = 20

[node name="1" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.509804, 0.509804, 0.509804, 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="2" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 61.0
margin_right = 102.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="3" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 122.0
margin_right = 163.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="4" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 183.0
margin_right = 224.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="5" type="Label" parent="GridContainer/HungerContainer/AffectPopulation"]
margin_left = 244.0
margin_right = 285.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="HappinessLabel" type="Label" parent="GridContainer"]
margin_top = 104.0
margin_right = 150.0
margin_bottom = 151.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Happiness"

[node name="HappinessContainer" type="VBoxContainer" parent="GridContainer"]
margin_left = 154.0
margin_top = 85.0
margin_right = 439.0
margin_bottom = 170.0

[node name="Scale" type="HBoxContainer" parent="GridContainer/HappinessContainer"]
margin_right = 285.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="GridContainer/HappinessContainer/Scale"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.2, 0.819608, 0, 1 )

[node name="AffectPopulation" type="HBoxContainer" parent="GridContainer/HappinessContainer"]
margin_top = 44.0
margin_right = 285.0
margin_bottom = 85.0
custom_constants/separation = 20

[node name="1" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="2" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 61.0
margin_right = 102.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="3" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 122.0
margin_right = 163.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="4" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 183.0
margin_right = 224.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="5" type="Label" parent="GridContainer/HappinessContainer/AffectPopulation"]
margin_left = 244.0
margin_right = 285.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="DisciplineLabel" type="Label" parent="GridContainer"]
margin_top = 193.0
margin_right = 150.0
margin_bottom = 240.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Discipline"

[node name="DisciplineContainer" type="VBoxContainer" parent="GridContainer"]
margin_left = 154.0
margin_top = 174.0
margin_right = 439.0
margin_bottom = 259.0

[node name="Scale" type="HBoxContainer" parent="GridContainer/DisciplineContainer"]
margin_right = 285.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="GridContainer/DisciplineContainer/Scale"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.2, 0.819608, 0, 1 )

[node name="AffectPopulation" type="HBoxContainer" parent="GridContainer/DisciplineContainer"]
margin_top = 44.0
margin_right = 285.0
margin_bottom = 85.0
custom_constants/separation = 20

[node name="1" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="2" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 61.0
margin_right = 102.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="3" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 122.0
margin_right = 163.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="4" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 183.0
margin_right = 224.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="5" type="Label" parent="GridContainer/DisciplineContainer/AffectPopulation"]
margin_left = 244.0
margin_right = 285.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "-20"
align = 1
clip_text = true

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2( 854, 364 )
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 0, 1 )
spread = 20.79
initial_velocity = 190.26
initial_velocity_random = 0.13
angular_velocity = 25.26
angular_velocity_random = 0.29
scale_amount = 2.0
scale_amount_random = 0.3

[node name="PopulationLabel" type="Label" parent="."]
margin_left = 817.0
margin_top = 740.0
margin_right = 1165.0
margin_bottom = 872.0
theme = ExtResource( 1 )
text = "Population"

[node name="Population" type="Label" parent="."]
margin_left = 1171.0
margin_top = 740.0
margin_right = 1519.0
margin_bottom = 872.0
theme = ExtResource( 1 )
text = "0"

[node name="MeterLabel" type="Label" parent="."]
margin_left = 426.0
margin_top = 261.0
margin_right = 774.0
margin_bottom = 393.0
theme = ExtResource( 1 )
text = "Hunger"

[node name="Title" type="Label" parent="."]
margin_left = 664.0
margin_right = 1012.0
margin_bottom = 132.0
theme = ExtResource( 1 )
text = "Type"

[node name="MeterChange" type="Label" parent="."]
margin_left = 467.0
margin_top = 355.0
margin_right = 644.0
margin_bottom = 487.0
theme = ExtResource( 1 )
text = "+2"

[node name="TraitsLabel" type="Label" parent="."]
margin_left = 89.0
margin_top = 53.0
margin_right = 437.0
margin_bottom = 185.0
theme = ExtResource( 1 )
text = "Traits"

[node name="Traits" type="Label" parent="."]
margin_left = 89.0
margin_top = 185.0
margin_right = 426.0
margin_bottom = 621.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "One
Two
Three"

[node name="Card" parent="." instance=ExtResource( 6 )]
margin_left = 1729.0
margin_top = 185.0
margin_right = 2009.0
margin_bottom = 605.0

[node name="TrainingLabel" type="Label" parent="."]
margin_left = 664.0
margin_top = 916.0
margin_right = 958.0
margin_bottom = 1048.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Training"

[node name="Scale" type="HBoxContainer" parent="TrainingLabel"]
margin_left = 196.0
margin_top = -45.0
margin_right = 564.0
margin_bottom = 91.0
custom_constants/separation = 20

[node name="1" type="ColorRect" parent="TrainingLabel/Scale"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0, 0, 1 )

[node name="2" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 60.0
margin_top = 48.0
margin_right = 100.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.25098, 0, 1 )

[node name="3" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 120.0
margin_top = 48.0
margin_right = 160.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.819608, 0.654902, 0, 1 )

[node name="4" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 180.0
margin_top = 48.0
margin_right = 220.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.639216, 0.819608, 0, 1 )

[node name="5" type="ColorRect" parent="TrainingLabel/Scale"]
margin_left = 240.0
margin_top = 48.0
margin_right = 280.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 4
color = Color( 0.2, 0.819608, 0, 1 )

[node name="SequenceTimer" type="Timer" parent="."]
one_shot = true

[node name="OpponentPicture" type="Sprite" parent="."]
position = Vector2( 1551, 614 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Show opponent" = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
repeat = true
playback_speed = 2.0
playback/repeat = true
playback/speed = 2.0

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 9 )
state_machine = SubResource( 11 )

[connection signal="timeout" from="SequenceTimer" to="." method="on_timer_timeout"]
[connection signal="tween_step" from="Tween" to="." method="on_tween_step"]
